2024-09-30  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-upjf2.test, testdata/upjf2.{tex,dvi},
	testdata/upj{f,v}-c.{pl,tfm},
	testdata/upj{f,v}2_full.{vf,zvp0}, testdata/upjf.map,
	testdata/Makefile_upjf, Makefile.am:
	Add a test for upTeX new encoding.
	https://github.com/texjporg/tex-jp-build/issues/46

2024-09-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* virtualfont.c, dvips.h: Support upTeX new encoding
	for combining characters via virtual fonts.
	https://github.com/texjporg/tex-jp-build/issues/46
	* {virtualfont,dopage,tfmload}.c:
	More strict check to interpret OFM FONTDIR
	as pTeX vertical writing.
	https://github.com/texjporg/tex-jp-build/issues/170#issuecomment-2295037307
	https://github.com/texjporg/tex-jp-build/issues/99

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-05  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* afm2tfm.c,
	* dvips.c,
	* dvips.h,
	* dvips.texi,
	* configure.ac: version 2024.1 and copyright 2024.

2023-08-26  Karl Berry  <karl@freefriends.org>

	* writet1.c (t1_builtin_enc): sync change from pdftexdir/writet1.c
	(r68069).

2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* beginfontk1.test, eepic-nan.test, pfbincl.test, same-name.test,
	test-{afm2tfm,dvips,missing-image,overflow-buffers}.test,
	uptex-vf.test: Make easier to test on Windows.

2023-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {virtualfont,pprescan,scanpage,dopage,tfmload}.c, dvips.h:
	Fallback multibyte characters in virtual fonts to
	OFM fonts for (u)pTeX.
	https://github.com/texjporg/tex-jp-build/issues/99
	* tfmload.c: Accept maximum EC 0x10FFFF for OFM level 1.
	* uptex-vf.test, Makefile_upjf, testdata/upjf-r00.{ofm,opl},
	testdata/upjv-r00.{ofm,opl}, testdata/upjf1-r.{tfm,pl},
	testdata/upjf1_{full,omit}.{vf,zvp0}, Makefile.am:
	Add new tests for fallback virtual font to OFM.

	The rule for virtual fonts (VF) fallback is extended:
	If a VF has no entry of a codepoint and the first